[tool.poetry]
name = "markov-chain-scenario-trees"
version = "0.1.0"
description = "Fast optimal pruning for Markov chain scenario tree NMPC"
authors = ["Andreas Potschka, Christoph Hansknecht <christoph.hansknecht@tu-clausthal.de>"]
readme = "README.md"
packages = [{include = "markov_chain_scenario_trees"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"
networkx = "^3.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
