[tool.poetry]
name = "markov-chain-scenario-trees"
version = "0.1.0"
description = "Fast optimal pruning for Markov chain scenario tree NMPC"
authors = ["Andreas Potschka, Christoph Hansknecht <christoph.hansknecht@tu-clausthal.de>"]
readme = "README.md"
packages = [{include = "mcst"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.20"
scipy = "^1.10.0"
networkx = "^3.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
